[project]
name = "qwen3-subtitles-pipeline"
version = "0.2.0"
description = "Subtitle pipeline with Qwen3 alignment and FunASR/SenseVoice transcription support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.3",
  "qwen-asr>=0.0.6",
  "silero-vad",
  "soundfile",
  "typer>=0.24.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"

[tool.basedpyright]
allowedUntypedLibraries = ["soundfile", "silero_vad", "qwen_asr"]
